k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: secure-api-network-policy

spec:
  podSelector:
    matchLabels:
      app: secure-api

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}

      ports:
        - protocol: TCP
          port: 8080
